1. object cloning implemented for data integrity 2. tests were adapted to the principle depicted on deepcopy.png